--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,10 @@
   background: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* line 33, C:/Users/HP/Desktop/July-HTML/292 Health coach/assets/scss/_color.scss */
 .gray-bg {
   background: #f5f5f5;
